Updated REST server with example stub for time/space/text query
