# REST-Server/openapi_server/models/__init__.py
@@ -3,8 +3,13 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from openapi_server.models.geo_query import GeoQuery
 from openapi_server.models.io_file import IOFile
 from openapi_server.models.io_request import IORequest
 from openapi_server.models.model import Model
 from openapi_server.models.model_config import ModelConfig
+from openapi_server.models.query import Query
+from openapi_server.models.search_result import SearchResult
+from openapi_server.models.text_query import TextQuery
+from openapi_server.models.time_query import TimeQuery
 from openapi_server.models.variable import Variable
