# REST-Server/openapi_server/models/text_query.py
@@ -1,0 +1,170 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class TextQuery(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, query_type=None, result_type=None, type=None, term=None):  # noqa: E501
+        """TextQuery - a model defined in OpenAPI
+
+        :param query_type: The query_type of this TextQuery.  # noqa: E501
+        :type query_type: str
+        :param result_type: The result_type of this TextQuery.  # noqa: E501
+        :type result_type: str
+        :param type: The type of this TextQuery.  # noqa: E501
+        :type type: str
+        :param term: The term of this TextQuery.  # noqa: E501
+        :type term: str
+        """
+        self.openapi_types = {
+            'query_type': str,
+            'result_type': str,
+            'type': str,
+            'term': str
+        }
+
+        self.attribute_map = {
+            'query_type': 'query_type',
+            'result_type': 'result_type',
+            'type': 'type',
+            'term': 'term'
+        }
+
+        self._query_type = query_type
+        self._result_type = result_type
+        self._type = type
+        self._term = term
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'TextQuery':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The TextQuery of this TextQuery.  # noqa: E501
+        :rtype: TextQuery
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def query_type(self):
+        """Gets the query_type of this TextQuery.
+
+        Is this a geo, time or text query?  # noqa: E501
+
+        :return: The query_type of this TextQuery.
+        :rtype: str
+        """
+        return self._query_type
+
+    @query_type.setter
+    def query_type(self, query_type):
+        """Sets the query_type of this TextQuery.
+
+        Is this a geo, time or text query?  # noqa: E501
+
+        :param query_type: The query_type of this TextQuery.
+        :type query_type: str
+        """
+        allowed_values = ["geo", "time", "text"]  # noqa: E501
+        if query_type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `query_type` ({0}), must be one of {1}"
+                .format(query_type, allowed_values)
+            )
+
+        self._query_type = query_type
+
+    @property
+    def result_type(self):
+        """Gets the result_type of this TextQuery.
+
+        Should the query return models, datasets, or variables?  # noqa: E501
+
+        :return: The result_type of this TextQuery.
+        :rtype: str
+        """
+        return self._result_type
+
+    @result_type.setter
+    def result_type(self, result_type):
+        """Sets the result_type of this TextQuery.
+
+        Should the query return models, datasets, or variables?  # noqa: E501
+
+        :param result_type: The result_type of this TextQuery.
+        :type result_type: str
+        """
+        allowed_values = ["models", "datasets", "variables"]  # noqa: E501
+        if result_type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `result_type` ({0}), must be one of {1}"
+                .format(result_type, allowed_values)
+            )
+
+        self._result_type = result_type
+
+    @property
+    def type(self):
+        """Gets the type of this TextQuery.
+
+        The type of query (either keyword or standard name)  # noqa: E501
+
+        :return: The type of this TextQuery.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type):
+        """Sets the type of this TextQuery.
+
+        The type of query (either keyword or standard name)  # noqa: E501
+
+        :param type: The type of this TextQuery.
+        :type type: str
+        """
+        allowed_values = ["keyword", "standard name"]  # noqa: E501
+        if type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `type` ({0}), must be one of {1}"
+                .format(type, allowed_values)
+            )
+
+        self._type = type
+
+    @property
+    def term(self):
+        """Gets the term of this TextQuery.
+
+        The search term of interest.  # noqa: E501
+
+        :return: The term of this TextQuery.
+        :rtype: str
+        """
+        return self._term
+
+    @term.setter
+    def term(self, term):
+        """Sets the term of this TextQuery.
+
+        The search term of interest.  # noqa: E501
+
+        :param term: The term of this TextQuery.
+        :type term: str
+        """
+        if term is None:
+            raise ValueError("Invalid value for `term`, must not be `None`")  # noqa: E501
+
+        self._term = term
